# gamemind

./: .gitignore  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  model-decision-check.yml
adapters/: minecraft.yaml
docs/: MODEL_DECISION.md  README.md  adapter-schema.md  batch-c-plan.md  errors.md  events-schema.md  final-design.md  install.md  protocols.md  sean-approval-package.md
gamemind/: __init__.py  blackboard.py  cli.py  errors.py  fsm.py  motor.py  runner.py  watchdog.py
gamemind/adapter/: __init__.py  loader.py  schema.py
gamemind/brain/: __init__.py  anthropic_backend.py  backend.py  budget_tracker.py  mock_backend.py  prompt_assembler.py
gamemind/brain/prompts/: __init__.py  loader.py
gamemind/brain/prompts/templates/: abort_evaluation.prompt  disagreement_arbiter.prompt  intent_decision.prompt  plan_decomposition.prompt  replan_from_stuck.prompt  task_completion_verification.prompt
gamemind/bt/: __init__.py  decorators.py  engine.py  harvesting.py  motor_command.py  navigating.py
gamemind/capture/: __init__.py  _win32.py  backend.py  dxgi_backend.py  selector.py  wgc_backend.py
gamemind/daemon/: __init__.py  lifespan.py  main.py  pid.py
gamemind/events/: __init__.py  envelope.py  scrub.py  writer.py
gamemind/input/: __init__.py  backend.py  pydirectinput_backend.py
gamemind/intent/: __init__.py  executor.py  models.py  tracker.py
gamemind/layer2/: __init__.py  action_guard.py  stuck_detector.py  wake_trigger.py
gamemind/perception/: __init__.py  freshness.py  ollama_backend.py  prompt_builder.py
gamemind/session/: __init__.py  manager.py  outcomes.py
gamemind/spatial/: __init__.py  state.py
gamemind/verify/: __init__.py  checks.py
phase-c-0/: C0_CLOSEOUT.md  README.md  pyproject.toml
phase-c-0/fixtures/: LABELING_GUIDE.md  groundtruth.example.json  groundtruth.json
phase-c-0/probe/: client.py  gen_smoke_fixtures.py  run.py  tasks.py
phase-c/spike/: INVESTIGATION_REPORT.md  README.md  pyproject.toml  research_gd_variants.md
phase-c/spike/fixtures/: CAPTURE_GUIDE_TASK_SPECIFIC.md  labelme_classes.txt  prompts.yaml
phase-c/spike/fixtures/labels/: README.md  _calibration_constants.yaml  t1_oak_log_forest.json  task1.json  task10.json  task2.json  task3.json  task4.json  task5.1.json  task5.json  task6.json  task7.1.json  task8.json  task9.json
phase-c/spike/fixtures/overlays/: task1_overlay.json
phase-c/spike/fixtures_delta/: CAPTURE_GUIDE.md  labelme_classes.txt  prompts.yaml  task1.json  task2.json  task3.json  task4.1.json  task4.json  task5.json  task6.json  task7.json  task8.1.json  task8.json  task9.json
phase-c/spike/fixtures_delta/labels/: task1.json  task2.json  task3.json  task4.1.json  task4.json  task5.json  task6.json  task7.json  task8.1.json  task8.json  task9.json
phase-c/spike/reports/: SESSION_CLOSEOUT_2026-04-14.md  benchmark_latency.json  benchmark_vram.json  eval_day2.json  eval_day2_base.json  eval_day2_iou03.json  eval_day2_verbose.json  eval_delta_gd.json  eval_phase1.json  owlv2_baseline.json  template_stress.json  track_a_arbitration_spec.md  yoloe_baseline.json  yoloe_delta.json  yoloe_minecraft_thresh01.json
phase-c/spike/sanity/: __init__.py  benchmark_latency.py  benchmark_vram.py  detect.py  draw_labels.py  eval_harness.py  normalize_labels.py  owlv2_baseline.py  template_match_poc.py  template_stress.py  yoloe_baseline.py
scripts/: spike_anchor_validation.py  test_anthropic_ping.py  test_capture_live.py  test_input_live.py  test_live_perception_spike.py
tests/: test_blackboard.py  test_budget_tracker.py  test_camera_control.py  test_cli_adapter.py  test_cli_daemon.py  test_concurrent_behavioral.py  test_fsm.py  test_mock_backend.py  test_motor.py  test_prompt_builder.py  test_runner_dry_run.py  test_smoke.py  test_verify_checks.py  test_watchdog.py
tests/adapter/: test_loader.py  test_schema.py
tests/brain/: test_anthropic_backend.py  test_prompts.py
tests/bt/: test_behaviors.py  test_decorators.py  test_engine.py
tests/daemon/: test_lifespan.py  test_pid.py
tests/events/: test_envelope.py  test_scrub.py  test_writer.py
tests/input/: test_stateful_keys.py
tests/intent/: test_executor.py  test_tracker.py
tests/layer2/: test_action_guard.py  test_stuck_detector.py  test_wake_trigger.py
tests/perception/: test_freshness.py  test_ollama_backend.py
tests/session/: test_manager.py  test_session_endpoints.py
tests/spatial/: test_state.py
