[project]
name = "gamemind"
version = "0.1.0"
description = "Universal game AI agent framework — declarative adapters over vision + OS input"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Sean Zhang" },
]
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "pydantic>=2.9.0",
    "pyyaml>=6.0.2",
    "pillow>=11.0.0",
    # Windows-only Layer 0 capture + Layer 4 input bindings. Installed
    # automatically on Windows; skipped on Linux CI via sys_platform
    # marker so pytest can still run the non-Windows branch of the
    # platform-aware backend tests.
    "windows-capture>=1.5.0; sys_platform == 'win32'",
    "dxcam>=0.3.0; sys_platform == 'win32'",
    "pydirectinput-rgx>=2.1.3; sys_platform == 'win32'",
    "numpy>=2.0.0; sys_platform == 'win32'",
]

[project.scripts]
gamemind = "gamemind.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gamemind"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Intentionally excludes `I` (isort) — ruff 0.14.0's isort I001 was flagging
# import blocks in a way that resisted `known-first-party` config. Revisit
# once the scaffold settles; `ruff format` still handles basic formatting.
select = ["E", "F", "N", "UP", "B", "SIM"]
# SIM105 (contextlib.suppress) and SIM108 (ternary) are style preferences
# that clutter Win32 ctypes cleanup code without improving it. E501 line
# length is handled by format instead.
ignore = ["E501", "SIM105", "SIM108"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
