[project]
name = "gamemind-probe"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "pillow>=12.2.0",
    "pydantic>=2.12.5",
    "requests>=2.33.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Intentionally excludes `I` (isort) — see gamemind/pyproject.toml note.
select = ["E", "F", "N", "UP", "B", "SIM"]
ignore = ["E501"]
